2006-05-13  Tom Tromey  <tromey@redhat.com>

	* java/nio/ByteBufferImpl.java (compact): Always set position.

2006-05-11  Mark Wielaard  <mark@klomp.org>

	* java/util/logging/Logger.java (global): Initialize inside static
	PrivilegedAction.

2006-05-11  Mark Wielaard  <mark@klomp.org>

	* java/awt/geom/GeneralPath.java (WIND_EVEN_ODD, WIND_NON_ZERO):
	Fully qualify PathIterator constants

2006-05-10  Roman Kennke <kennke@aicas.com>

	PR classpath/27481
	* javax/swing/plaf/basic/BasicInternalFrameUI.java
	(installDefaults): Set background of content pane to null, if
	no custom color has been installed by the application yet.

2006-05-10  Roman Kennke <kennke@aicas.com>

	PR classpath/27481
	* javax/swing/JRootPane.java
	(createContentPane): Don't set background to null.

2006-05-09  Robert Schuster  <robertschuster@fsfe.org>

	PR classpath/24216
	* javax/swing/text/AbstractDocument.java:
	(insertString): Added more documentation, added argument check.
	(remove): Added more documentation.
	(removeImpl): Added argument check.
	(replace): Added more documentation, added argument check.

2006-05-08  Lillian Angel  <langel@redhat.com>

	* java/net/URLClassLoader.java
	(JarURLLoader): Added check to make sure the INDEX.LIST file
	exists.

2006-05-08  Roman Kennke <kennke@aicas.com>

	PR classpath/27481
	* javax/swing/JRootPane.java
	(createContentPane): Set background of the content pane to null,
	so that the content pane inherits its background from the
	root pane.

2006-05-08  Roman Kennke <kennke@aicas.com>

	PR classpath/27480
	* javax/swing/ButtonGroup.java
	(add): Check if new button is selected and if so, deselect other
	buttons in the group.

2006-05-08  Lillian Angel  <langel@redhat.com>

	PR 27444
	* java/net/URLClassLoader.java
	(JarURLLoader): Added code to go through 
	META-INF/INDEX.LIST file to load all jars listed.

2006-05-08  Roman Kennke <kennke@aicas.com>

	PR classpath/27461
	* javax/swing/ImageIcon.java